ajout de la fonction de test engagecombat